[project]
name = "dashboardai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain>=1.0.2",
    "langchain-community>=0.4",
    "langchain-core>=1.0.0",
    "langchain-google-genai>=3.0.0",
    "langgraph>=1.0.1",
    "pandas>=2.3.3",
    "plotly>=6.3.1",
    "streamlit>=1.50.0",
]
